[package]
name = "supersize"
version = "0.0.0"
edition = "2021"
description = "Hyperfine inspired CLI tool for tracking file sizes"
authors = [ "Ben <kaleidawave@gmail.com>" ]
keywords = [ "cli", "file size", "hyperfine" ]
categories = [ "command-line-utilities", "filesystem" ]
license = "MIT"
repository = "https://github.com/kaleidawave/supersize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.3.14", features = ["brotli", "tokio", "gzip"] }
async-recursion = "1.0.0"
colored = "2.0.0"
futures = "0.3.21"
humansize = "1.1.1"
once_cell = "1.12.0"
tokio = { version = "1.19.2", features = ["io-util", "macros", "rt", "fs"] }
wax = "0.5.0"
